OTP pin validatation & permission
 - OTP pin validation for length of 6
 - Asking for permissions to the user
 - Ted permission library added.

--- a/app/src/main/res/layout/fragment_otp_sign_in.xml
+++ b/app/src/main/res/layout/fragment_otp_sign_in.xml
@@ -70,6 +70,9 @@
                         android:layout_height="wrap_content"
                         android:background="@null"
                         android:textColor="@color/white"
+                        android:inputType="number"
+                        android:maxLength="6"
+                        android:id="@+id/et_otp_code"
                         android:textSize="18sp"
                         android:hint="Enter OTP code"
                         android:theme="@style/EditTextTheme" />
