--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data class="SignInBinding">
-
         <variable
             name="viewModel"
             type="com.qpay.customer.ui.login.SignInViewModel" />
@@ -13,37 +12,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#1E4356"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#1E4356">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:title="Sign In"
             android:theme="@style/AppTheme.AppBarOverlay"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="Sign In"
-            app:titleTextColor="@color/white" />
+            app:titleTextColor="@color/white"/>
 
         <ImageView
             android:id="@+id/ivLogo"
             android:layout_width="200dp"
             android:layout_height="80dp"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_gravity="center_horizontal"
             android:scaleType="fitXY"
             android:src="@drawable/qpay_logo" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:scrollbarThumbVertical="@null">
-
+            android:scrollbarThumbVertical="@null"
+            android:fillViewport="true">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
                 <LinearLayout
                     android:id="@+id/linear"
                     android:layout_width="match_parent"
@@ -57,10 +54,10 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
                         android:text="Mobile"
                         android:textColor="@color/white"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:layout_marginBottom="8dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -75,44 +72,40 @@
                             android:textSize="18sp" />
 
                         <EditText
-                            android:id="@+id/et_mobile_no"
+                            android:id="@+id/mobile"
+                            android:theme="@style/EditTextTheme"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
-                            android:background="@null"
-                            android:inputType="phone"
-                            android:maxLength="11"
-                            android:textColor="@color/white"
                             android:textSize="18sp"
-                            android:theme="@style/EditTextTheme" />
+                            android:textColor="@color/white"
+                            android:background="@null"/>
                     </LinearLayout>
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
                         android:layout_marginTop="4dp"
-                        android:background="@color/albumColorPrimary" />
+                        android:background="@color/albumColorPrimary"/>
 
                 </LinearLayout>
-
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/linear"
                     android:layout_alignParentBottom="true">
-
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btnProceed"
                         android:layout_width="match_parent"
                         android:layout_height="54dp"
-                        android:layout_alignParentBottom="true"
-                        android:backgroundTint="#70DB44"
-                        android:insetBottom="0dp"
                         android:text="Proceed"
+                        app:cornerRadius="0dp"
+                        android:insetBottom="0dp"
+                        android:textSize="18sp"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
-                        app:cornerRadius="0dp" />
+                        android:backgroundTint="#70DB44"
+                        android:layout_alignParentBottom="true"/>
                 </RelativeLayout>
             </RelativeLayout>
         </ScrollView>
