--- a/app/src/main/res/navigation/auth.xml
+++ b/app/src/main/res/navigation/auth.xml
@@ -48,20 +48,6 @@
             app:popUpToInclusive="true" />
     </fragment>
 
-
-
-
-
-    <fragment
-        android:id="@+id/termsAndConditions"
-        android:name="com.qpay.customer.ui.terms_and_conditions.TermsAndConditionsFragment"
-        tools:layout="@layout/fragment_terms_and_condition">
-
-        <action
-            android:id="@+id/action_termsAndConditions_to_otpSignInFragment3"
-            app:destination="@id/otpSignInFragment" />
-    </fragment>
-
     <fragment
         android:id="@+id/registrationFragment"
         android:name="com.qpay.customer.ui.registration.RegistrationFragment"
@@ -145,10 +131,9 @@
         android:id="@+id/signInFragment"
         android:name="com.qpay.customer.ui.login.SignInFragment"
         tools:layout="@layout/fragment_sign_in">
-
         <action
-            android:id="@+id/action_signInFragment_to_termsFragment"
-            app:destination="@id/termsAndConditions"
+            android:id="@+id/action_signInFragment_to_otpSignInFragment"
+            app:destination="@id/otpSignInFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:launchSingleTop="false"
@@ -169,6 +154,9 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:popUpToInclusive="false" />
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
     <fragment
         android:id="@+id/pinNumberFragment"
@@ -181,6 +169,10 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
     <fragment
         android:id="@+id/profileSignInFragment"
@@ -199,11 +191,14 @@
         <argument
             android:name="NIDData"
             app:argType="com.qpay.customer.models.NIDDataModels" />
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
     <fragment
         android:id="@+id/permissionsFragment"
         android:name="com.qpay.customer.camerax.PermissionsFragment"
-        android:label="PermissionsFragment">
+        android:label="PermissionsFragment" >
         <action
             android:id="@+id/action_permissionsFragment_to_cameraFragment"
             app:destination="@id/cameraFragment"
@@ -219,25 +214,20 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
-            app:popUpTo="@id/pinNumberFragment" />
+            app:popUpTo="@id/pinNumberFragment"/>
+
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
     <fragment
         android:id="@+id/cameraFragment"
         android:name="com.qpay.customer.camerax.CameraFragment"
-        android:label="CameraFragment">
-        <action
-            android:id="@+id/action_cameraFragment_to_profileSignInFragment"
-            app:destination="@id/profileSignInFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"
-            app:popUpTo="@id/pinNumberFragment" />
-    </fragment>
+        android:label="CameraFragment" />
     <fragment
         android:id="@+id/NIDScanCameraXFragment"
         android:name="com.qpay.customer.nid_scan.NIDScanCameraXFragment"
-        android:label="NIDScanCameraXFragment">
+        android:label="NIDScanCameraXFragment" >
         <action
             android:id="@+id/action_NIDScanCameraXFragment_to_profileSignInFragment"
             app:destination="@id/profileSignInFragment"
@@ -246,6 +236,10 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:popUpTo="@id/pinNumberFragment" />
+
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
 
 </navigation>
