--- a/app/src/main/res/navigation/home.xml
+++ b/app/src/main/res/navigation/home.xml
@@ -33,7 +33,7 @@
 
         <argument
             android:name="bookArgData"
-            app:argType="com.qpay.customer.api.model.SubBook" />
+            app:argType="com.qpay.customer.models.SubBook" />
 
         <action
             android:id="@+id/action_chapterList_to_VideoPlay"
