--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    // QPay App Colors
+    <color name="themeColor">#1E4356</color>
+
+    // Custom Toast Colors
+    <color name="toast_error">#d32f2f</color>
+    <color name="toast_warning">#FFD600</color>
+    <color name="toast_success">#0AB939</color>
+
     <color name="colorPrimary">#7cb242</color>
     <color name="primary">#7cb242</color>
     <color name="primaryDark">#689F38</color>
