Night Push by Md. Yamin 25-8-2020. Time: 11:43 PM

--- a/app/src/main/res/layout/fragment_pin_number.xml
+++ b/app/src/main/res/layout/fragment_pin_number.xml
@@ -57,6 +57,7 @@
                         android:orientation="horizontal">
 
                         <EditText
+                            android:id="@+id/etPin"
                             android:theme="@style/EditTextTheme"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -99,6 +100,7 @@
                         android:orientation="horizontal">
 
                         <EditText
+                            android:id="@+id/etRepin"
                             android:theme="@style/EditTextTheme"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
