--- a/app/src/main/res/navigation/auth.xml
+++ b/app/src/main/res/navigation/auth.xml
@@ -48,10 +48,6 @@
             app:popUpToInclusive="true" />
     </fragment>
 
-
-
-
-
     <fragment
         android:id="@+id/termsAndConditions"
         android:name="com.qpay.customer.ui.terms_and_conditions.TermsAndConditionsFragment"
@@ -60,6 +56,10 @@
         <action
             android:id="@+id/action_termsAndConditions_to_otpSignInFragment3"
             app:destination="@id/otpSignInFragment" />
+
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
 
     <fragment
@@ -169,6 +169,9 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:popUpToInclusive="false" />
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
     <fragment
         android:id="@+id/pinNumberFragment"
@@ -181,6 +184,9 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
     <fragment
         android:id="@+id/profileSignInFragment"
@@ -199,6 +205,9 @@
         <argument
             android:name="NIDData"
             app:argType="com.qpay.customer.models.NIDDataModels" />
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
     <fragment
         android:id="@+id/permissionsFragment"
@@ -220,20 +229,14 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:popUpTo="@id/pinNumberFragment" />
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
     <fragment
         android:id="@+id/cameraFragment"
         android:name="com.qpay.customer.camerax.CameraFragment"
-        android:label="CameraFragment">
-        <action
-            android:id="@+id/action_cameraFragment_to_profileSignInFragment"
-            app:destination="@id/profileSignInFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"
-            app:popUpTo="@id/pinNumberFragment" />
-    </fragment>
+        android:label="CameraFragment"/>
     <fragment
         android:id="@+id/NIDScanCameraXFragment"
         android:name="com.qpay.customer.nid_scan.NIDScanCameraXFragment"
@@ -246,6 +249,9 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:popUpTo="@id/pinNumberFragment" />
+        <argument
+            android:name="registrationHelper"
+            app:argType="com.qpay.customer.models.RegistrationHelperModel" />
     </fragment>
 
 </navigation>
